<resources>
    <string name="app_name">Country Quiz</string>
    // Меню главного ээкрана
    <string name="StartGame">Начать игру</string>
    <string name="ProgressGame">Прогресс</string>

    // Меню выбора региона

    <string name="gameEuropa">Европа</string>
    <string name="gameAsia">Азия</string>
    <string name="gameOceania">Океания</string>
    <string name="gameAfrica">Африка</string>
    <string name="gameAmerica">Северная и Южная Америка</string>


    //
    <string-array name="questions">
        <item>Столица Германии?</item>
        <item>Столица России?</item>
        <item>Столица Дании?</item>
        <item>Столица Польши?</item>
    </string-array>

    <string-array name="answers">
        <item>Берлин</item>
        <item>Москва</item>
        <item>Копенгаген</item>
        <item>Варшава</item>
        <item>Чикаго</item>
        <item>Бостон</item>
        <item>Нью-йорк</item>
        <item>Челябинск</item>
        <item>Саратов</item>
        <item>Парма</item>
    </string-array>



</resources>
